--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+
 #App {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
+  font-family: "Lato", sans-serif;
   /* Ensures the page takes at least the full height of the viewport */
 }
 
@@ -11,63 +14,6 @@
   /* Makes the main content grow to take available space */
 }
 
-/* Footer */
-#footer {
-  background-color: #012831;
-  padding: 15px 30px;
-  font-family: "Lato", sans-serif;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-  color: white;
-}
 
-/* Specific styling for footer elements */
-.footer-content {
-  padding-right: 30%;
-  padding-top: 2%;
-}
 
-.footer-links {
-  padding-top: 2%;
-}
 
-.footer-copyright {
-  padding-left: 40%;
-  font-size: 0.8em;
-}
-
-/* Responsive Design */
-@media screen and (max-width: 1060px) {
-  #footer.footer {
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-  }
-
-  .footer-copyright {
-    padding-left: 0;
-  }
-
-  .footer-links {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .footer-content {
-    padding-right: 0;
-    text-align: center;
-  }
-
-  .footer-links {
-    padding-top: 10px;
-    text-align: center;
-  }
-
-  .footer-copyright {
-    text-align: center;
-    padding-left: 0;
-  }
-}
