--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,6 @@
   /* Makes the main content grow to take available space */
 }
 
+@media screen and (max-width: 1060px) {}
 
-
-
+@media screen and (max-width: 600px) {}
